# filetree

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: app.rs  file_ops.rs  file_tree.rs  git_status.rs  input.rs  main.rs  ui.rs
